--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,21 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.modalPlayer {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  top: 20px;
+  left: 50%;
+  position: absolute;
+  width: 60vw;
+  margin-left: calc((60vw / 2) * -1);
+  border: none
+}
+
+@media screen and (max-width: 700px) {
+  .modalPlayer {
+    left: 0;
+    margin: 0;
+    width: 100vw;
+  }
+}
