--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,14 @@
   left: 50%;
   position: absolute;
   width: 60vw;
-  margin-left: calc((60vw / 2) * -1);
+  margin-left: calc(-60vw / 2);
   border: none
 }
 
 @media screen and (max-width: 700px) {
   .modalPlayer {
-    left: 0;
-    margin: 0;
-    width: 100vw;
+    left: 50%;
+    margin-left: calc(-95vw / 2);
+    width: 95vw;
   }
 }
