--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,8 @@
 .videoPlayer {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
+
 
 .main-search {
   padding: 1rem;
@@ -10,31 +12,37 @@
   align-items: stretch;
   justify-content: center;
   height: 100vh;
-  max-width: 500px; }
-
+  max-width: 500px;
+}
 .main-search input {
-  width: 100%; }
+  width: 100%;
+}
 
 .searchResults {
   display: flex;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .truncate {
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; }
+  text-overflow: ellipsis;
+}
 
 .modalPlayer {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   top: 20px;
   left: 50%;
   position: absolute;
   width: 60vw;
   margin-left: calc(-60vw / 2);
-  border: none; }
+  border: none
+}
 
 @media screen and (max-width: 700px) {
   .modalPlayer {
     left: 50%;
     margin-left: calc(-95vw / 2);
-    width: 95vw; } }
+    width: 95vw;
+  }
+}
