--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,4 @@
-.videoPlayer {
-  width: 100%;
-  height: 100%;
-}
-
-
+$teal: #009688;
 .main-search {
   padding: 1rem;
   margin: 0 auto;
@@ -28,21 +23,25 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.modalPlayer {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  top: 20px;
-  left: 50%;
-  position: absolute;
-  width: 60vw;
-  margin-left: calc(-60vw / 2);
-  border: none
+.modal {
+  outline: none;
+  padding: 10rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.7)
 }
 
-@media screen and (max-width: 700px) {
-  .modalPlayer {
-    left: 50%;
-    margin-left: calc(-95vw / 2);
-    width: 95vw;
+.videoPlayer {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  max-height: 100%;
+  width: 100%;
+}
+.videoPlayerWrapper {
+  outline: none;
+}
+@media screen and (max-width: 1070px) {
+  .modal {
+    padding: 1rem;
   }
 }
