--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   background-color: rgba(0, 0, 0, 0.7); }
 
 .videoPlayer {
+  background-color: black;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   max-height: 100%;
   width: 100%; }
