--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-$teal: #009688;
-
 body {
   min-height: 100vh;
 }
@@ -12,9 +10,9 @@ body {
   justify-content: center;
   height: 100vh;
   max-width: 500px;
-}
-.main-search input {
-  width: 100%;
+  input {
+    width: 100%;
+  }
 }
 
 .searchResults {
@@ -33,12 +31,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0,0,0,0.7)
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .videoPlayer {
   background-color: black;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   max-height: 100%;
   width: 100%;
 }
