--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,62 @@
 body {
-  min-height: 100vh; }
+	min-height: 100vh;
+}
 
 .main-search {
-  padding: 1rem;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
-  height: 100vh;
-  max-width: 500px; }
-  .main-search input {
-    width: 100%; }
+	padding: 1rem;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+	justify-content: center;
+	height: 100vh;
+	max-width: 500px;
+}
+.main-search input {
+	width: 100%;
+}
 
 .searchResults {
-  display: flex;
-  flex-wrap: wrap; }
+	display: flex;
+	flex-wrap: wrap;
+}
 
 .truncate {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis; }
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
 
 .modal {
-  outline: none;
-  padding: 10rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.7); }
+	outline: none;
+	padding: 10rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.7);
+}
 
 .videoPlayer {
-  background-color: black;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  max-height: 100%;
-  width: 100%; }
+	background-color: black;
+	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+	max-height: 100%;
+	width: 100%;
+}
 
 .videoPlayerWrapper {
-  outline: none; }
+	outline: none;
+}
 
 @media screen and (max-width: 1070px) {
-  .modal {
-    padding: 1rem; } }
+	.modal {
+		padding: 1rem;
+	}
+}
+
+#watch {
+	max-width: 100vw;
+	width: 720px;
+	height: calc(720px / (16 / 9));
+	max-height: calc(100vw / (16 / 9));
+	border: none;
+}
